fixed sections so you can see the heading you jumped to underneath the top bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 40px;
 }
 
+section {
+  padding-top: 25px;
+}
+
 .hero-titles {
   padding-bottom: 5%;
 }
